--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
         "bootstrap-vue": "^2.0.0-rc.26",
         "chart.js": "^2.8.0",
         "laravel-echo": "^1.5.4",
+        "leaflet": "^1.6.0",
         "moment": "^2.24.0",
         "pusher-js": "^5.0.0",
         "vue-chartjs": "^3.4.2",
+        "vue-json-excel": "^0.2.98",
         "vue-router": "^3.0.7",
         "vue-select": "^3.1.0",
         "vue-sweetalert2": "^1.6.4",
+        "vue2-leaflet": "^2.5.2",
         "vuetify": "^2.2.12",
         "vuex": "^3.1.1"
     }
