--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.26",
         "chart.js": "^2.8.0",
+        "jspdf": "^1.5.3",
         "laravel-echo": "^1.5.4",
         "leaflet": "^1.6.0",
         "moment": "^2.24.0",
         "pusher-js": "^5.0.0",
+        "qrcode.vue": "^1.7.0",
         "vue-chartjs": "^3.4.2",
         "vue-json-excel": "^0.2.98",
+        "vue-qrcode": "^0.3.3",
+        "vue-qrcode-reader": "^2.1.1",
         "vue-router": "^3.0.7",
         "vue-select": "^3.1.0",
         "vue-sweetalert2": "^1.6.4",
