--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "pusher-js": "^5.0.0",
         "qrcode.vue": "^1.7.0",
         "vue-bootstrap-typeahead": "^0.2.6",
+        "vue-button-spinner": "^2.2.1",
         "vue-chartjs": "^3.4.2",
         "vue-json-excel": "^0.2.98",
         "vue-qrcode": "^0.3.3",
