--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.19.0",
-        "bootstrap": "^4.3.1",
-        "cross-env": "^5.1",
-        "jquery": "^3.4.1",
-        "laravel-mix": "^4.1.2",
-        "lodash": "^4.17.14",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.22.7",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.6.10",
-        "vue-template-compiler": "^2.6.10"
-    },
-    "dependencies": {
-        "bootstrap-vue": "^2.0.0-rc.26",
-        "chart.js": "^2.8.0",
-        "jspdf": "^1.5.3",
-        "laravel-echo": "^1.5.4",
-        "leaflet": "^1.6.0",
-        "moment": "^2.24.0",
-        "pusher-js": "^5.0.0",
-        "qrcode.vue": "^1.7.0",
-        "vue-bootstrap-typeahead": "^0.2.6",
-        "vue-button-spinner": "^2.2.1",
-        "vue-chartjs": "^3.4.2",
-        "vue-json-excel": "^0.2.98",
-        "vue-qrcode": "^0.3.3",
-        "vue-qrcode-reader": "^2.1.1",
-        "vue-router": "^3.0.7",
-        "vue-select": "^3.1.0",
-        "vue-sweetalert2": "^1.6.4",
-        "vue2-leaflet": "^2.5.2",
-        "vuetify": "^2.2.12",
-        "vuex": "^3.1.1"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll"
+  },
+  "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.26",
+    "chart.js": "^2.8.0",
+    "jspdf": "^1.5.3",
+    "laravel-echo": "^1.5.4",
+    "leaflet": "^1.6.0",
+    "moment": "^2.24.0",
+    "pusher-js": "^5.0.0",
+    "qrcode.vue": "^1.7.0",
+    "register-service-worker": "^1.6.2",
+    "vue-bootstrap-typeahead": "^0.2.6",
+    "vue-button-spinner": "^2.2.1",
+    "vue-chartjs": "^3.4.2",
+    "vue-json-excel": "^0.2.98",
+    "vue-qrcode": "^0.3.3",
+    "vue-qrcode-reader": "^2.1.1",
+    "vue-router": "^3.0.7",
+    "vue-select": "^3.1.0",
+    "vue-sweetalert2": "^1.6.4",
+    "vue2-leaflet": "^2.5.2",
+    "vuejs-auto-complete": "^0.9.0",
+    "vuetify": "^2.2.12",
+    "vuex": "^3.1.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-pwa": "~4.2.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "cross-env": "^5.1",
+    "jquery": "^3.4.1",
+    "laravel-mix": "^4.1.2",
+    "lodash": "^4.17.14",
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.22.7",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
+  }
 }
