--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-button-spinner": "^2.2.1",
     "vue-chartjs": "^3.4.2",
     "vue-json-excel": "^0.2.98",
+    "vue-pdf": "^4.0.8",
     "vue-qrcode": "^0.3.3",
     "vue-qrcode-reader": "^2.1.1",
     "vue-router": "^3.0.7",
