--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "pusher/pusher-php-server": "^4.0",
+        "riverskies/laravel-mobile-detect": "^1.3",
         "spatie/laravel-permission": "^3.8"
     },
     "require-dev": {
