--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.26",
     "chart.js": "^2.8.0",
+    "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "laravel-echo": "^1.5.4",
     "leaflet": "^1.6.0",
@@ -22,7 +23,10 @@
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-button-spinner": "^2.2.1",
     "vue-chartjs": "^3.4.2",
+    "vue-html-to-paper": "^1.3.1",
+    "vue-html2canvas": "0.0.4",
     "vue-json-excel": "^0.2.98",
+    "vue-loading-overlay": "^3.3.2",
     "vue-pdf": "^4.0.8",
     "vue-qrcode": "^0.3.3",
     "vue-qrcode-reader": "^2.1.1",
