--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vue-qrcode-reader": "^2.1.1",
     "vue-router": "^3.0.7",
     "vue-select": "^3.1.0",
+    "vue-signature-pad": "^2.0.0",
     "vue-sweetalert2": "^1.6.4",
     "vue2-leaflet": "^2.5.2",
     "vuejs-auto-complete": "^0.9.0",
