--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "alfa6661/laravel-autonumber": "^1.2",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.5",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
