--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-html2canvas": "0.0.4",
     "vue-json-excel": "^0.2.98",
     "vue-loading-overlay": "^3.3.2",
+    "vue-moment": "^4.1.0",
     "vue-pdf": "^4.0.8",
     "vue-qrcode": "^0.3.3",
     "vue-qrcode-reader": "^2.1.1",
