--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
+        "hashids/hashids": "^4.0",
+        "jenssegers/optimus": "^1.1",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
