--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.26",
     "chart.js": "^2.8.0",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "laravel-echo": "^1.5.4",
