--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qrcode.vue": "^1.7.0",
     "register-service-worker": "^1.7.1",
     "vue-bootstrap-typeahead": "^0.2.6",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-button-spinner": "^2.2.1",
     "vue-chartjs": "^3.4.2",
     "vue-html-to-paper": "^1.3.1",
