--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.0.0-rc.26",
     "chart.js": "^2.8.0",
     "chartjs-plugin-datalabels": "^0.7.0",
+    "date-fns": "^2.16.0",
     "html2canvas": "^1.0.0-rc.5",
     "jspdf": "^1.5.3",
     "laravel-echo": "^1.5.4",
@@ -21,6 +22,8 @@
     "pusher-js": "^5.0.0",
     "qrcode.vue": "^1.7.0",
     "register-service-worker": "^1.7.1",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.2",
     "vue-bootstrap-typeahead": "^0.2.6",
     "vue-browser-geolocation": "^1.8.0",
     "vue-button-spinner": "^2.2.1",
@@ -40,6 +43,7 @@
     "vue2-leaflet": "^2.5.2",
     "vuejs-auto-complete": "^0.9.0",
     "vuetify": "^2.2.12",
+    "vuetify-daterange-picker": "^3.2.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
